2009-09-21 Ian Rutt
 * glide_temp.F90: made a start at pulling apart temperature
   calculation. Moved calculation of Glen's A outside temperature
   calculation, and split timeevoltemp into three separate subroutines,
   one for each option. Regtested against branchpoint for e2.a - OK.

2009-09-18 Ian Rutt
 * GCISM-refactor-ICR branch: Refactored calculation of Glen's A as an
   example
 * m4macros: temporarily reverted to old netcdf macro, since new one
   doesn't work

2009-09-17 Magnus Hagdorn
 * tests/exact-isothermal/scripts/run_verif.py: handle commandline similarly
   to glide_lauch.py
 * tests/exact-isothermal/tests/Makefile.am: specify what binary to use

2009-09-17 Magnus Hagdorn
 * configure.in: add new Makefile
 * example-drivers/Makefile.am: add a data target
 * example-drivers/EISMINT-3/Makefile.am: ditto
 * example-drivers/eis/Makefile.am: ditto
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: new - run example
 * example-drivers/EISMINT-3/EISMINT-3/e3gl_steady.config: rename output file
   so make can figure out if it needs to do something
 * example-drivers/eis/fenscan/Makefile.am: specify binary to run

2009-09-16 Magnus Hagdorn
 * tests/Makefile.am: decent into subdirs when generating data
 * tests/exact-isothermal/Makefile.am: decent into subdirs
 * tests/exact-isothermal/scripts/run_verif.py: updated script to be analogous
   to glide_launch.py
 * tests/exact-isothermal/src/verif_glide.F90: use glimmer commandline parser
   and glimmer timer
 * tests/exact-isothermal/tests/Makefile.am: fix Makefile

2009-09-16 Magnus Hagdorn
 * configure.in: user can specify if they want to use the SGE to submit jobs
   when running tests/examples
 * make.rules: find the correct model to run
 * scripts/glide_launch.py: simplify selection of model
 * scripts/qsub_glide.sh: pass environment to SGE job
 * tests/EISMINT/EISMINT-1/Makefile.am: select simple_glide binary
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/EISMINT/benchmarks/Makefile.am: ditto